# blockchain-complements-ai

./: .gitignore  pyproject.toml
.claude/: settings.json
.claude-memory/: handoff.md
.claude-memory/001-init/: PLAN.md  PROGRESS.md
.claude-memory/002-pdf-conversion/: NOTES.md
.claude-memory/004-vector-db/: PROGRESS.md
.claude/agents/: background-drafter.md  conclusion-drafter.md  keypoints-drafter.md  overview-drafter.md  paper-summarizer-eco.md  paper-summary-corrector.md  paper-summary-reviewer.md  summary-reviewer-eco.md
apps/: pdf_to_md.py  surreal_cli.py
apps/surreal_core/: Cargo.toml
apps/surreal_core/crates/cli/: Cargo.toml
apps/surreal_core/crates/cli/src/: main.rs  output.rs  relations.rs  summary.rs
apps/surreal_core/crates/cli/src/commands/: init.rs  mod.rs  query.rs  related.rs  update.rs
apps/surreal_core/crates/cli/tests/: cli.rs
apps/surreal_core/crates/embedder/: Cargo.toml
apps/surreal_core/crates/embedder/src/: fastembed_impl.rs  lib.rs
apps/surreal_core/crates/vectordb/: Cargo.toml
apps/surreal_core/crates/vectordb/src/: lib.rs  surreal.rs
research/: SUMMARIES_CHECKLIST.md  blockchain-multi-agent-coordination-research-report.md  index.md  websites.md
research/AI_and_BC_integration_in_business__content_analysis/: 10.1007_s10796-022-10279-0-citation.ris  paper.md  summary.md
research/CounterweightsAndComplementarities-ConvergeAIAndBlockchain/: acm_3733612.3733614.bib  paper.md  summary.md
research/a_blockchain_integration_to_support__multi-agent_systems/: paper.md  summary.md  wzo2xrxox5.ris
(+392 files in other folders)
