[package]
name = "cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "surreal_core"
path = "src/main.rs"

[dependencies]
vectordb = { path = "../vectordb" }
embedder = { path = "../embedder" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde_yaml_ng = "0.10"

[dev-dependencies]
tempfile = "3"
