[package]
name = "vectordb"
version = "0.1.0"
edition.workspace = true

[dependencies]
surrealdb = { version = "2", features = ["kv-surrealkv"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
